--- a/app/views/comments/_new.html.erb
+++ b/app/views/comments/_new.html.erb
@@ -5,10 +5,12 @@
 <%= form_for [@restaurant, comment], html: { class: "panel-collapse collapse", remote: true, data: { user: user_id_if_exists(current_user) } } do |f| %>
 	<%= f.hidden_field :restaurant_id, value: @restaurant.id %>
 	
-	<%= image_tag '/images/users/default_profile.png', alt: '유저 프로필 이미지', style: 'float: left;' %>
-	<div class="star_rating_form" data-score=<%= comment.rating %>></div>
+	<div style="margin-top: 5px;">
+		<%= image_tag '/images/users/default_profile.png', class: 'profile_img', alt: '유저 프로필 이미지', style: 'float: left;' %>
+		<div class="star_rating_form" data-score=<%= comment.rating %>></div>
+	</div>
 
-	<div class="form-group" style="clear: both;">
+	<div class="form-group" style="clear: both; padding-top: 10px;">
 		<%= text_field_tag :menu_comments, nil, { class: "menu_comments_tag", data: { restaurant: @restaurant.id } } %>
 	</div>
 
