--- a/app/views/menu_comments/more.js.erb
+++ b/app/views/menu_comments/more.js.erb
@@ -1,4 +1,4 @@
-$("#myModal #comment_body").append("<%= j(render partial: 'comments/show', collection: @comments, as: :comment) %>");
+$("#myModal .comment_body").append("<%= j(render partial: 'comments/show', collection: @comments, as: :comment) %>");
 
 // Hide link if it is last page otherwise update link.
 <% if @comments.next_page.nil? %>
