--- a/app/views/comments/create.js.erb
+++ b/app/views/comments/create.js.erb
@@ -1,7 +1,7 @@
 $("#flash").html("<%= j render "layouts/flash" %>");
 
 // Comments#index
-$("#comment_section ul#comment_body").prepend("<%= j render partial: "comments/show", locals: { comment: @comment } %>");
+$("#comment_section ul.comment_body").prepend("<%= j render partial: "comments/show", locals: { comment: @comment } %>");
 
 // When the first comment is created.
 if ($('#no_comment').css('display') == 'block' && $('#comment_section').css('display') == 'none') {
