--- a/app/views/menu_comments/_modal_body.html.erb
+++ b/app/views/menu_comments/_modal_body.html.erb
@@ -1,4 +1,4 @@
-<ul id='comment_body' style='list-style: none;'>
+<ul class='comment_body'>
 	<%= render partial: 'comments/show', collection: @comments, as: :comment %>
 </ul>
 
