--- a/app/views/comments/_show.html.erb
+++ b/app/views/comments/_show.html.erb
@@ -1,6 +1,6 @@
 <li id="comment_<%= comment.id %>" class="comment">
 	<div class="top">
-		<div class="img" style="float: left;">
+		<div class="img">
 			<%= profile_img(comment.user) %>
 		</div>
 		<div class="info">
