--- a/app/views/menu_comments/_modal_body.html.erb
+++ b/app/views/menu_comments/_modal_body.html.erb
@@ -1,4 +1,4 @@
-<ul class='comment_body'>
+<ul class='comment_body' style="padding: 0">
 	<%= render partial: 'comments/show', collection: @comments, as: :comment %>
 </ul>
 
