--- a/app/views/comments/_new.html.erb
+++ b/app/views/comments/_new.html.erb
@@ -6,7 +6,7 @@
 	<%= f.hidden_field :restaurant_id, value: @restaurant.id %>
 	
 	<div style="margin-top: 5px;">
-		<%= image_tag '/images/users/default_profile.png', class: 'profile_img', alt: '유저 프로필 이미지', style: 'float: left;' %>
+		<%= image_tag '/images/users/default_profile.png', class: 'profile_img', alt: '유저 프로필 이미지' %>
 		<div class="star_rating_form" data-score=<%= comment.rating %>></div>
 	</div>
 
