--- a/app/views/comments/edit.js.erb
+++ b/app/views/comments/edit.js.erb
@@ -1,3 +1,5 @@
+$('#myModal').hide();
+
 // Comments#edit
 $("#comment_<%= @comment.id %>").replaceWith("<%= j(render "edit") %>");
 starRatingForm();
