--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -52,12 +52,12 @@
 					</div>
 
 					<!-- Menu -->
-					<div role="tabpanel" class="tab-pane fade" id="menu">
+					<div role="tabpanel" class="tab-pane fade in active" id="menu">
 						<%= render 'menu' %>
 					</div>
 
 					<!-- Comment -->
-					<div role="tabpanel" class="tab-pane fade in active" id="comment">
+					<div role="tabpanel" class="tab-pane fade" id="comment">
 						<%= render "comment" %>
 					</div>
 
