--- a/app/views/questions/new.js.erb
+++ b/app/views/questions/new.js.erb
@@ -2,3 +2,5 @@ $(".modal-title").html("질문 등록하기");
 $(".modal-body").html("<%= j(render "new") %>");
 $(".modal-title").addClass("left_border_label");
 $(".modal-title").css("border-color", "red");
+
+questionsValidation();
