--- a/app/views/users/passwords/edit.html.erb
+++ b/app/views/users/passwords/edit.html.erb
@@ -7,7 +7,7 @@
 			<%= f.hidden_field :reset_password_token %>
 
 			<div class="form-group">
-				<%= f.password_field :password, { class: "form-control", autofocus: true, autocomplete: "off", placeholder: "새 비밀번호*" } %>
+				<%= f.password_field :password, { class: "form-control", autofocus: true, autocomplete: "off", placeholder: "새 비밀번호(8자 이상)*" } %>
 			</div>
 			<div class="form-group">
 				<%= f.password_field :password_confirmation, { class: "form-control", autocomplete: "off", placeholder: "비밀번호 확인*" } %>
