--- a/app/views/users/registrations/edit.html.erb
+++ b/app/views/users/registrations/edit.html.erb
@@ -22,7 +22,7 @@
 
 					<div class="form-group">
 						<%= f.label :password, "비밀번호 변경" %> <i>(비밀번호를 변경할 때 채워주세요.)</i>
-						<%= f.password_field :password, { class: "form-control", autocomplete: "off", placeholder: "새 비밀번호*" } %>
+						<%= f.password_field :password, { class: "form-control", autocomplete: "off", placeholder: "새 비밀번호(8자 이상)*" } %>
 					</div>
 
 					<div class="form-group">
