--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -17,7 +17,7 @@
 				</div>
 
 				<div class="form-group">
-					<%= f.password_field :password, { class: "form-control", autocomplete: "off", placeholder: "비밀번호*" } %>
+					<%= f.password_field :password, { class: "form-control", autocomplete: "off", placeholder: "비밀번호(8자 이상)*" } %>
 				</div>
 
 				<div class="form-group">
