--- a/app/views/sitemap/index.xml.erb
+++ b/app/views/sitemap/index.xml.erb
@@ -39,7 +39,7 @@
 	<% @restaurants.each do |restaurant| %>
 		<url>
 			<loc><%= restaurant_url(restaurant) %></loc>
-			<lastmod><%= restaurant.updated_at.strftime('%Y-%m-%d') %></lastmod>
+			<lastmod><%= restaurant.last_updated_at.strftime('%Y-%m-%d') %></lastmod>
 		</url>
 	<% end %>
 </urlset> 
