Change background image

--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -236,8 +236,8 @@ footer {
 
 /* home#brandpage */
 #home_bg {
-	background: linear-gradient( rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url('/images/menumap/home_bg_sm.jpg');
-	background-position: center top;
+	background: url('/images/menumap/home_bg_sm.jpg');
+	background-position: center;
 	height: 200px;
 	color: white;
 	text-align: center;
@@ -254,7 +254,7 @@ footer {
 @media (min-width: 992px) {
 	#home_bg {
 		background: linear-gradient( rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url('/images/menumap/home_bg.jpg');
-		background-position: center top;
+		background-position: center;
 		height: 500px;
 		padding: 0 15px;
 		font-size: 30px;
