Mymaps#new modal

--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -19,9 +19,13 @@
 				</div>
 
 				<div class="right">
-					<%= link_to share_rest_path(@restaurant), remote: true, data: { toggle: "modal", target: "#myModal" } do %>
+					<div><%= mymap_button(current_user, @restaurant) %></div>
+					<!-- Share via Kakao talk -->
+					<!--
+					<#%= link_to share_rest_path(@restaurant), remote: true, data: { toggle: "modal", target: "#myModal" } do %>
 						<div><i class="fa fa-share-alt" style="margin-right: 5px;"></i>공유</div>
-					<% end %>
+					<#% end %>
+					-->
 					<div id="rst_show_map"><i class="fa fa-globe" style="margin-right: 5px;"></i>지도</div>
 				</div>
 			</div>
