--- a/app/views/mymaps/_show.html.erb
+++ b/app/views/mymaps/_show.html.erb
@@ -1,43 +1,23 @@
-<table>
-	<tr>
-		<th>mymap_id</th>
-		<th>restaurant_id</th>
-		<th>rating</th>
-		<th>group</th>
-		<th>contents</th>
-	</tr>
+<div style="width: 120px; height: 90px; float: left;">
+	<%= restaurant_picture(@restaurant) %>
+</div>
 
-	<tr>
-		<td><%= @mymap.id %></td>
-		<td><%= @mymap.restaurant_id %></td>
-		
-		<% if !@mymap.rating.blank? && @mymap.rating != 0 %>
-			<td class="star_rating" data-score=<%= @mymap.rating%>></td>
-		<% else %>
-			<td></td>
-		<% end %>
+<div><%= restaurant_name_with_menu_on(@restaurant) %></div>
 
-		<% if @mymap.group != 0 %>
-			<td><%= image_tag "/images/mymaps/mymap_group_icon_" + @mymap.group.to_s + ".svg", id: "mymap_group_icon_" + @mymap.group.to_s, style: "height: 20px; width: 20px;" %></td>
-		<% else %>
-			<td></td>
-		<% end %>
+<% if @mymap.rating != 0 %>
+	<div class="star_rating" data-score=<%= @mymap.rating %>></div>
+<% end %>
 
-		<td><%= @mymap.contents %></td>
-	</tr>
+<% if @mymap.contents.blank? %>
+	<div style="color: #5890ff; clear: both;">
+		MyMap 한줄평이 없습니다.
+	</div>
+<% else %>
+	<div style="clear: both;"><%= @mymap.contents %></div>
+<% end %>
+<div style="float: right;"><%= time_in_ko(@mymap.updated_at) %> 작성</div>
 
-	<tr>
-		<td><%= link_to "edit_mymap", edit_mymap_path(@mymap), { id: "edit_mymap_button", remote: true } %></td>
-		<td><%= link_to "destroy_mymap", mymap_path(@mymap), { id: "destroy_mymap_button", method: :delete, remote: true, data: {dismiss: "modal"} } %></td>
-	</tr>
-</table>
-
-<script>
-	$(".star_rating").raty({
-		path: "/images/star_rating/",
-		readOnly: true,
-		score: function() {
-			return parseInt($(this).attr("data-score")) / 2;
-		}
-	});
-</script>
+<div class="modal-footer" style="padding: 10px 0 0; clear: both;">
+	<%= link_to "삭제", mymap_path(@mymap), { class: "btn btn_cancel", method: :delete, remote: true, data: {dismiss: "modal"} } %>
+	<%= link_to "수정", edit_mymap_path(@mymap), class: "btn btn_submit", remote: true %>
+</div>
