Mymaps#edit modal

--- a/app/views/mymaps/_field.html.erb
+++ b/app/views/mymaps/_field.html.erb
@@ -14,5 +14,5 @@
 </div>
 
 <div class="form-group">
-	<%= f.text_area :contents, { class: "form-control", rows: 3, placeholder: "#{@restaurant.name}에 대한 한줄평을 남겨주세요." } %>
+	<%= f.text_area :contents, { class: "form-control", rows: 3, placeholder: "음식점에 대한 한줄평을 남겨주세요." } %>
 </div>
