--- a/app/views/mymaps/_show.html.erb
+++ b/app/views/mymaps/_show.html.erb
@@ -1,4 +1,4 @@
-<div style="width: 120px; height: 90px; float: left;">
+<div class="rst_img" style="width: 120px; height: 90px; float: left;">
 	<%= restaurant_picture(@restaurant) %>
 </div>
 
