Mymaps#update modal

--- a/app/views/mymaps/new.js.erb
+++ b/app/views/mymaps/new.js.erb
@@ -4,4 +4,4 @@ $('.modal-body').html("<%= j(render partial: 'mymaps/new') %>");
 $('.modal-title').addClass('left_border_label');
 $('.modal-title').css('border-color', '#ea4c15');
 
-starRatingForm();
+starRatingForm(true);
