Fix starRatingForm parameter error

--- a/app/views/mymaps/edit.js.erb
+++ b/app/views/mymaps/edit.js.erb
@@ -1,4 +1,4 @@
 $('.modal-title').html("<span style='font-family: Ubuntu;'>MyMap 수정</span>");
 $(".modal-body").html("<%= j(render "edit") %>");
 
-starRatingForm(true);
+starRatingForm('mymap');
