--- a/app/views/mymaps/create.js.erb
+++ b/app/views/mymaps/create.js.erb
@@ -1,3 +1,4 @@
+$("#flash").html("<%= j render "layouts/flash" %>");
 $(".modal-title").html("Show MyMap");
 $(".modal-body").html("<%= j(render "show") %>");
 
