--- a/app/views/mymaps/update.js.erb
+++ b/app/views/mymaps/update.js.erb
@@ -1,3 +1,4 @@
+$("#flash").html("<%= j render "layouts/flash" %>");
 $('.modal-title').html("<span style='font-family: Ubuntu;'>MyMap</span>");
 $(".modal-body").html("<%= j(render "show") %>");
 
