--- a/app/views/mymaps/index.html.erb
+++ b/app/views/mymaps/index.html.erb
@@ -1,7 +1,3 @@
-<h1>Mymap#index</h1>
-
-<%= render "shared/user_navigation" %>
-
 <% content_for :head do %>
 	<meta name="twitter:card" content="summary_large_image" />
 	<meta name="twitter:site" content="@luke9407" />
@@ -20,20 +16,26 @@
 	<% end %>
 <% end %>
 
-<div id="naver_map"></div>
+<div class="container">
+	<div class="col-md-6 col-md-offset-3">
+		<h1><%= @user.username %>'s <span style="font-family: Ubuntu;">MyMap</span></h1>
+		<div id="naver_map" style="margin: 0 -15px 0;"></div>
 
-<table>
-	<tr>
-		<th>mymap_id</th>
-		<th>restaurant_id</th>
-		<th>restaurant_name</th>
-		<th>mymap_button</th>
-	</tr>
+		<table>
+			<tr>
+				<th>mymap_id</th>
+				<th>restaurant_id</th>
+				<th>restaurant_name</th>
+				<th>mymap_button</th>
+			</tr>
 
-	<%= render @mymaps %>
-</table>
+			<%= render @mymaps %>
+		</table>
 
-<%= link_to "share MyMap", new_user_mymap_snapshot_path(@user), id: "share_mymap_button", remote: true, data: {toggle: "modal", target: "#myModal"} %>
+		<%= link_to "share MyMap", new_user_mymap_snapshot_path(@user), id: "share_mymap_button", remote: true, data: {toggle: "modal", target: "#myModal"} %>
+
+	</div>
+</div>
 
 <script>
 	$(document).ready(function(){ 
