Default infoWindow without design

--- a/app/views/home/info_window.js.erb
+++ b/app/views/home/info_window.js.erb
@@ -1,1 +1,3 @@
-$("#map_<%= @id %>").html("<%= j render 'info_window' %>");
+$("#info_window_<%= @restaurant.id %>").html("<%= j render 'info_window' %>");
+
+showStarRating();
