--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -234,6 +234,21 @@ footer {
 	}
 }
 
+/* Map */
+.info_window {
+	background-color: white;
+	padding: 15px;
+	border-radius: 0 5px 5px 5px; 
+	.img {
+		width: 120px;
+		height: 90px;
+		img {
+			width: 100%;
+			height: 100%;
+		}
+	}
+}
+
 /* home#brandpage */
 #home_bg {
 	background: url('/images/menumap/home_bg_sm.jpg');
