--- a/app/views/home/_info_window.html.erb
+++ b/app/views/home/_info_window.html.erb
@@ -1,1 +1,9 @@
-<h1 style="color: red;"><%= @name %></h1>
+<div class="info_window">
+	<div class="img">
+		<%= restaurant_picture(@restaurant) %>
+	</div>
+	<div><%= restaurant_name_with_menu_on(@restaurant) %></div>
+	<div><%= time_in_ko(@mymap.updated_at) %></div>
+	<div class="star_rating" data-score=<%= @mymap.rating %>></div>
+	<div><%= @mymap.contents %></div>
+</div>
