--- a/app/views/home/info_window.js.erb
+++ b/app/views/home/info_window.js.erb
@@ -1,3 +1,3 @@
-$("#info_window_<%= @restaurant.id %>").html("<%= j render 'info_window' %>");
+$("#info_window_<%= @restaurant.id %>").html("<%= j render 'shared/info_window' %>");
 
 showStarRating();
