--- a/app/views/mymaps/update.js.erb
+++ b/app/views/mymaps/update.js.erb
@@ -3,3 +3,4 @@ $('.modal-title').html("<span style='font-family: Ubuntu;'>MyMap</span>");
 $(".modal-body").html("<%= j(render "show") %>");
 
 showStarRating();
+updateMymapIcon(<%= @mymap.index_plus_one %>, <%= @mymap.group %>);
