Toggle map labels and update mymap icons on other pages

--- a/app/views/mymaps/create.js.erb
+++ b/app/views/mymaps/create.js.erb
@@ -4,3 +4,5 @@ $(".modal-body").html("<%= j(render "show") %>");
 
 // Change MyMap button to show saved MyMap.
 $("#new_mymap_<%= @restaurant.id %>").replaceWith("<%= j(mymap_button(@user, @restaurant)) %>");
+
+updateMymapIcon(<%= @mymap.index_plus_one %>, <%= @mymap.group %>);
