--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -86,8 +86,7 @@
 
 <script>
 	$(document).ready( function() {
-		loadNaverMap();
-		// toggleLabels();
+		loadNaverMap(false, false);
 
 		imageUploadValidate();
 
