--- a/app/views/mymaps/index.html.erb
+++ b/app/views/mymaps/index.html.erb
@@ -46,7 +46,6 @@
 
 <script>
 	$(document).ready(function(){ 
-		loadNaverMap();
-		// toggleLabels();
+		loadNaverMap(false, true);
 	});
 </script>
