--- a/app/views/mymaps/new.js.erb
+++ b/app/views/mymaps/new.js.erb
@@ -5,3 +5,4 @@ $('.modal-title').addClass('left_border_label');
 $('.modal-title').css('border-color', '#ea4c15');
 
 starRatingForm('mymap');
+mymapValidation('#new_mymap');
