--- a/app/views/mymaps/edit.js.erb
+++ b/app/views/mymaps/edit.js.erb
@@ -2,3 +2,4 @@ $('.modal-title').html("<span style='font-family: Ubuntu;'>MyMap 수정</span>")
 $(".modal-body").html("<%= j(render "edit") %>");
 
 starRatingForm('mymap');
+mymapValidation('.edit_mymap');
