Fix menu_comments modal error of not displaying

--- a/app/views/menu_comments/index.js.erb
+++ b/app/views/menu_comments/index.js.erb
@@ -3,6 +3,7 @@ $('.modal-body').html("<%= j render 'modal_body' %>");
 
 $('#myModal').modal();
 $('#myModal .sitga').css('font-size', '100%');
+$('#myModal .modal-header').css('display', 'block');
 $('h4.modal-title div').css('display', 'inline');
 
 showStarRating();
