--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -20,7 +20,7 @@
 
 				<div class="right">
 					<div><%= mymap_button(current_user, @restaurant) %></div>
-					<div id="rst_show_map"><i class="fa fa-globe" style="margin-right: 5px;"></i>지도</div>
+					<div id="rst_show_map"><div style="margin: 12px 4px 0;"><i class="fa fa-globe" style="margin-right: 5px;"></i>지도</div></div>
 				</div>
 			</div>
 		</div>
