--- a/app/views/mymaps/_add_on.html.erb
+++ b/app/views/mymaps/_add_on.html.erb
@@ -1,18 +1,34 @@
-<% mymap ||= current_user.find_mymap(restaurant)  if current_user %>
+<% mymap ||= current_user.find_mymap(restaurant) if current_user %>
 
 <% unless mymap.blank? %>
 	<div class="mymap">
 
 		<%= link_to "#mymap_#{mymap.id}", { role: "button", data: { toggle: "collapse" } } do %>
-			<div>MyMap 평가보기 <i class="fa fa-chevron-down" style="width: initial;"></i></div>
+			<div><span style="font-family: Ubuntu">MyMap</span> 평가보기</div>
 		<% end %>
 
 		<div id="mymap_<%= mymap.id %>" class="panel-collapse collapse">
 			<div class="img">
 				<%= profile_img(mymap.user) %>
 			</div>
-			<%= mymap.rating %>
-			<%= mymap.contents %>
+			<div class="right">
+				<div><%= mymap.user.username %></div>
+
+				<% if mymap.rating > 0 %>
+					<div>
+						<div class="star_rating_form" data-score=<%= mymap.rating %> style="float: left;"></div>
+						<div style="float: left; color: #999; line-height: 1.2; margin-left: 5px;"><%= time_in_ko(mymap.updated_at) %></div>
+					</div>
+				<% elsif mymap.contents.blank? %>
+					<div style="color: #5890ff;"><%= time_in_ko(mymap.updated_at) %> <span style="font-family: Ubuntu;">MyMap</span> 등록</div>
+				<% else %>
+					<div style="color: #999;"><%= time_in_ko(mymap.updated_at) %></div>
+				<% end %>
+			</div>
+
+			<% if !mymap.contents.blank? %>
+				<div class="contents"><%= mymap.contents %></div>
+			<% end %>
 		</div>
 
 	</div>
