--- a/app/views/mymaps/_field.html.erb
+++ b/app/views/mymaps/_field.html.erb
@@ -1,7 +1,7 @@
-<%= restaurant_picture(@restaurant) %>
+<%= restaurant_picture(restaurant) %>
 
 <div class="right">
-	<div class="name"><%= @restaurant.name %></div>
+	<div class="name"><%= restaurant.name %></div>
 	<div class="form-group">
 		<div class="star_rating_form" data-score=<%= @mymap.rating %>></div>
 	</div>
