--- a/app/views/mymaps/create.js.erb
+++ b/app/views/mymaps/create.js.erb
@@ -1,5 +1,5 @@
 $("#flash").html("<%= j render "layouts/flash" %>");
-$(".modal-title").html("Show MyMap");
+$('.modal-title').html("<span class='left_border_label' style='border-color: #ea4c15; font-family: Ubuntu;'>MyMap</span>");
 $(".modal-body").html("<%= j(render "show") %>");
 
 // Change MyMap button to show saved MyMap.
