--- a/app/views/mymaps/show.js.erb
+++ b/app/views/mymaps/show.js.erb
@@ -1,4 +1,4 @@
-$('.modal-title').html("<span style='font-family: Ubuntu;'>MyMap</span>");
+$('.modal-title').html("<span class='left_border_label' style='border-color: #ea4c15; font-family: Ubuntu;'>MyMap</span>");
 $('.modal-body').html("<%= j(render 'show') %>");
 
 showStarRating();
