--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -1004,16 +1004,20 @@ a.MultiFile-remove {
 
 /* mymaps#new modal */
 #myModal {
-	form#new_mymap, form.edit_mymap {
+	form#new_mymap, form.edit_mymap, .show_mymap {
 		> img {
 			width: 120px;
 			height: 80px;
 			float: left;
+			margin-bottom: 10px
 		}
 		.right {
 			float: left;
 			padding: 10px;
 			line-height: 2;
+			span.name {
+				padding-left: 5px;
+			}
 		}
 		.col-xs-8 {
 			padding-left: 25px;
@@ -1027,7 +1031,7 @@ a.MultiFile-remove {
 
 @media (min-width: 992px) {
 	#myModal {
-		form#new_mymap, form.edit_mymap {
+		form#new_mymap, form.edit_mymap, .show_mymap {
 			> img {
 				width: 160px;
 				height: 120px;
@@ -1054,9 +1058,21 @@ a.MultiFile-remove {
 
 /* mymaps#show modal */
 #myModal {
-	div.rst_img img {
-		width: 100%;
-		height: 100%;
+	.show_mymap {
+		.contents {
+			clear: both;
+			padding: 5px 15px 15px;
+		}
+	}
+}
+
+@media (min-width: 992px) {
+	#myModal {
+		.show_mymap {
+			.star_rating img {
+				width: 18px;
+			}
+		}
 	}
 }
 
