Mymap_snapshots#show

--- a/app/views/mymap_snapshots/show.html.erb
+++ b/app/views/mymap_snapshots/show.html.erb
@@ -1,6 +1,7 @@
 <div id="naver_map"></div>
 
 <script>
-	$(document).on("page:load", loadNaverMap(<%= @lat %>, <%= @lng %>, <%= @level %>));
-	$(document).ready(function(){ showMarkers(<%= @coord_array %>)});
+	$(document).ready( function() {
+		loadNaverMap(false, false);
+	});
 </script>
