Change .ready to 'ready page:load'

--- a/app/views/notices/new.html.erb
+++ b/app/views/notices/new.html.erb
@@ -6,7 +6,7 @@
 <% end %>
 
 <script>
-	$(document).ready( function() {
+	$(document).on('ready page:load', function() {
 		$('#new_notice').validate({
 			rules: {
 				'notice[question]': { required: true },
