--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -85,7 +85,7 @@
 <% end %>
 
 <script>
-	$(document).ready( function() {
+	$(document).on('ready page:load', function() {
 		loadNaverMap(false, false);
 
 		imageUploadValidate();
