--- a/app/views/users/profiles/edit.html.erb
+++ b/app/views/users/profiles/edit.html.erb
@@ -34,7 +34,7 @@
 </div>
 
 <script>
-	$(document).ready( function() {
+	$(document).on('ready page:load', function() {
 		$('.edit_user').validate({
 			rules: {
 				'user[username]': { required: true },
