--- a/app/views/layouts/_flash.html.erb
+++ b/app/views/layouts/_flash.html.erb
@@ -11,7 +11,7 @@
 <% end %>
 
 <script>
-	$(document).on('ready page:load', function() {
+	$(document).ready(function() {
 		if ("<%= flash %>" != '') {
 			$('#flash .alert').delay(100).fadeIn("slow");
 			$('#flash .alert').delay(1500).fadeOut("slow");
