--- a/app/views/mymap_snapshots/show.html.erb
+++ b/app/views/mymap_snapshots/show.html.erb
@@ -1,7 +1,7 @@
 <div id="naver_map"></div>
 
 <script>
-	$(document).on('ready page:load', function() {
+	$(document).ready(function() {
 		loadNaverMap(false, false);
 	});
 </script>
