--- a/app/views/mymaps/index.html.erb
+++ b/app/views/mymaps/index.html.erb
@@ -29,7 +29,7 @@
 </div>
 
 <script>
-	$(document).on('ready page:load', function(){ 
+	$(document).ready(function() {
 		loadNaverMap(false, true, 0.8);
 	});
 </script>
