--- a/app/views/restaurants/_menu.html.erb
+++ b/app/views/restaurants/_menu.html.erb
@@ -9,7 +9,7 @@
 	</div>
 
 <script>
-	$(document).on('ready page:load', function() {
+	$(document).ready(function() {
 		$("#new_menu_section").css("margin-top", "10px");
 	});
 </script>
