--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -11,7 +11,7 @@
 </div>
 
 <script>
-	$(document).on('ready page:load', function() {
+	$(document).ready(function() {
 		loadNaverMap(false, false);
 		hidePaginateButton(<%= @restaurants.total_pages %>, <%= @restaurants.current_page %>);
 		showStarRating();
